[tool.poetry]
name = "esport"
version = "0.1.0"
description = ""
authors = ["Lwin Maung Maung <lwinmaungmaung.ytu@gmail.com>"]
readme = "README.md"
packages = [{include = "esport", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "==7.4.*"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
pylint = "==3.*"
pydantic = "==2.*"
pydantic-settings = "==2.*"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
